# subscriber-centric-broadband-multi-tenant-slicing-graph-optimizations-research-codebase

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  plan.md  pyproject.toml  requirements.txt
configs/freeradius/: README.md  clients.conf.example  policy_attributes.md  users.example
configs/openwrt/: README.md  firewall.example  network.example  wireless.example
configs/tc/: fq_codel_example.sh  htb_slice_example.sh  reset_tc.sh
configs/vxlan/: README.md  vxlan_example.sh
configs/wireguard/: README.md  wg0.conf.example
data/samples/: openwrt_metrics_sample.txt  tc_stats_sample.txt  wireguard_stats_sample.txt
docs/: agentic_workflows.md  architecture.md  experiment_protocol.md  mathematical_model.md  measurement_schema.md  safety_constraints.md  workflow_two_machine_setup.md
paper/latex/: README.md
scripts/experiments/: run_all_baselines.sh  run_track1_prototype.sh  run_track2_edge_overhead.sh  run_track3_emulation.sh  run_track4_simulation.sh
scripts/openwrt/: apply_slice_policy.sh  collect_openwrt_metrics.sh  run_auth_test.sh  run_latency_test.sh  run_throughput_test.sh
scripts/setup/: check_environment.py  check_environment.sh  install_fedora_deps.sh  install_openwrt_tools.sh  (+1 more)
tests/: test_cost.py  test_effective_service.py  test_fallback.py  test_leo_backoff.py  test_leo_cost.py  test_parameters.py  test_parse_openwrt_metrics.py  test_parse_radius_logs.py  test_parse_tc_stats.py  test_parse_wireguard_stats.py  test_queueing.py  test_safe_action_set.py  test_sample_processing.py  test_telemetry_throttle.py  test_weights.py
(+53 files in other folders)
