[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subscriber-centric-broadband-research"
version = "0.1.0"
description = "Starter research repository for subscriber-centric broadband infrastructure."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "networkx>=3.2",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "black>=24.0", "mypy>=1.8"]
ml = ["torch", "torch-geometric"]
notebooks = ["jupyter", "ipykernel"]
stats = ["statsmodels>=0.14"]

[project.scripts]
scb-parse-samples = "scb.telemetry.sample_processing:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
disallow_untyped_defs = true
